# core_bdk_wallet

./: .gitignore  Cargo.toml  README.md
schema/: chain.capnp  common.capnp  echo.capnp  handler.capnp  init.capnp  mining.capnp
src/: .main.rs.swp  c++_capnp.rs  chain_capnp.rs  common_capnp.rs  echo_capnp.rs  handler_capnp.rs  init_capnp.rs  main.rs  mining_capnp.rs  proxy_capnp.rs  rpc_interface.rs
